# TSK-Interhouse-Quiz

./: .gitignore  Quiz Competition User Guide.docx  README.md  Score.cpp  a.out  control.cpp  database_dblinker.c  makefile  quiz_server  quiz_server.c  quiz_server.c~  score.h  startup.sh  tasks.odt  us.stackdump  齊答題.odt
ControlPanel/: Communicator.java  HouseChooser.java  LoginPanel.java  MainWindow.java  MarksPanel.java  Question.java  QuestionPage.java  QuestionPages.java  Questions.json  SetChooser.java  WelcomePanel.java
Images/: .directory
QuizSystemControlPanel/: .classpath  .project
android/: build.xml  local.properties
build-quizcontrol-Desktop_Qt_5_2_0_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_questionsPage.cpp  moc_startpage.cpp
buzzer_design/: buzzer_main_module.fzz
buzzer_src/: buzzer  buzzer.c  buzzer.h  buzzer.ino  polling.py
c_nonblock_server/: Makefile  my_c_server  my_c_server.c  mysocket.c  mysocket.c.orig  mysocket.h
database_input/: server.py  test.db
database_src/: db_connector.h  readme
doc/: Doxyfile  TODO  doxygen_sqlite3.db
html_server/: html_content.html  index.html  nohup.out  readme  sendCommand.py  sendMessage.py  sendMessage2.py  server.py  sse-node.html
interhouse-quiz-display/: interhouse-quiz-display.html  interhouse-quiz-display.js
ipc_database_src/: .database_dblinker.c.swp  data.db  database_dblinker  database_dblinker.c  database_dblinker.c.bak  database_dblinker.c.orig  database_dblinker.h  database_dblinker_old.c  database_dblinker_updated.c  json_string.c  json_string.h  json_string_creater  json_string_creater.c  makefile  test.sql
ipc_scoring/: .listener.py.swp  .score.c.swp  Score.cpp  Score.cpp~  a.out  change_log.txt  listener  listener.c  listener.py  makefile  score  score.c  score.c~  score.h  score2.c
json_checker/: main  test.json
main/: .gitignore  Doxyfile  Makefile  build.sh  makefile  makefile.orig  quiz_server  quiz_server.orig  score.db  script.sh  test.db
main/src/: .buzzer.c.swp  .non_blocking_socket.c.swp  .non_blocking_socket.h.swp  .quiz_server.c.swp  CMakeLists.txt  CMakeLists_MYSQL.txt  buzzer.c  buzzer.c~  buzzer.h  command.sh  database_dblinker.c  database_dblinker.h  database_dblinker.h.orig  db_connector.c  db_mysql.c  db_mysql.h  db_redis.c  db_redis.c~  db_redis.h  json_message.c  json_msg.c  json_string.c  layout.c  link_list.c  mysocket.c  mysocket.c.orig  mysocket.h  mysocket.h.orig  non_blocking_socket.c  non_blocking_socket.h  question_db.c  question_db.c.orig  quiz_server.c  quiz_server.c~  score.c  score.c~  score.h  score.h~  score_db.c  server_cb.c  (+2 more)
main/src/dynamic_server/: Makefile
main/src/dynamic_server/src/: Makefile  buzzer.c  buzzer.h  db_redis.c  layout.c  link_list.c  link_list.h  non_blocking_socket.c  non_blocking_socket.h  quiz_server.c  score.c  server.c  server.h  server_cb.c  server_cb.h  utilities.c  utilities.h
main/src/dynamic_server/src/include/: buzzer.h  link_list.h  non_blocking_socket.h  score.h  server_cb.h  utilities.h
main/src/dynamic_server/test_src/: Makefile  layout.h  link_list.c  link_list.h  server  server.c  server.h
main/src/include/: db_redis.h  json_msg.h  layout.h  link_list.h  non_blocking_socket.h  question_db.h  score.h  score_db.h  server.h  server_cb.h  utilities.h  webserver_connector.h
main/src/json/: json_decode.c
main/src/polling_daemon/src/: ajax.c  ajax.h  daemon.c  stack.c
main/src/score_db/: Makefile  score_db.c  score_db.h
mongo_db_connector/: quiz_score_update  quiz_score_update.c
mongo_wrapper/: Makefile  db_controller.c  json_msg.c  json_msg.h  webserver_connector  webserver_connector.c
mysql_database_src/: .json_string.h.swp  .swp  data.sql  database_dblinker  database_dblinker.c  database_dblinker.h  ipc_database  ipc_database.c  json_string  json_string.h  makefile
quizcontrol/: mainwindow.cpp  mainwindow.h  questionsPage.cpp  questionsPage.h  quizcontrol.pro  (+2 more)
(+359 files in other folders)
